<resources>

    <!--Kevin-->
    <string name="app_name">Music Store HN</string>
    <string name="name">Usuario Eliminado</string>
    <string name="username">deleteduser</string>
    <string name="email">user@deleted.app</string>
    <string name="followers">0</string>
    <string name="seguidores">Seguidores</string>
    <string name="following">0</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="eliminar">Eliminar</string>
    <string name="privada">Privada</string>
    <string name="confirmar">Confirmar</string>
    <string name="pendiente">Pendiente</string>
    <string name="buscarUsuario">Buscar Usuarios</string>
    <string name="busquedaUsuario">Busqueda de Usuarios</string>
    <string name="seguir">Seguir</string>
    <string name="seguido">Seguido</string>
    <string name="seguidos">Seguidos</string>
    <string name="playlist">Playlists</string>
    <string name="playlist1">Nombre de Playlist</string>
    <string name="grupo1">Grupo 1</string>
    <string name="grupo2">Grupo 2</string>
    <string name="grupo3">Grupo 3</string>
    <string name="ingreseCodigoVerificacion">Hemos enviado un código de verificación a tu dirección de correo. Por favor, introduce esta secuencia de números en la siguiente casilla de verificación.</string>
    <string name="verificar">Verificar</string>
    <string name="gruposfavs">Grupos Favoritos</string>


    <string name="atras">Atrás</string>
    <string name="playListFav">PlayList Favoritas</string>
    <string name="cancionesFav">Canciones Favoritas</string>
    <string name="vermas">Ver Mas</string>
    <string name="NuevaListas">Quiere nuevas listas de reproducción</string>
    <string name="NombreUsuario">Kency Angely Rosa Paz</string>
    <string name="cambiarContrasena">Cambiar Contraseña</string>
    <string name="CrearPlayList">Crear PlayList</string>
    <string name="CambiarNombre">Seleccionar una imagen</string>
    <string name="EscribaNombrePlayList">Escriba un nombre que le guste</string>
    <string name="EscribaBiografa">Escriba una Biografía</string>
    <string name="Crearplaylist">Crear Play List</string>
    <string name="playList">Play List</string>
    <string name="cancelar">Cancelar</string>
    <string name="principal">Siguiente</string>
    <string name="archivosPersonales">Archivos Personales</string>


    <string name="ingreseContrasenaActual">Ingrese su contraseña actual</string>
    <string name="enviarCodigo">Enviar código</string>
    <string name="biografia">Biografía</string>
    <string name="habilitarDatosBiometricos">Habilitar Datos Biométricos</string>
    <string name="perfilPrivado">Perfil Privado</string>
    <string name="eliminarCuenta">Eliminar Cuenta</string>
    <string name="notificaciones">Notificaciones</string>


    <!--Jensy Login-->
    <string name="textviewLoginUsuario">Usuario</string>
    <string name="textviewLoginPassword">Contraseña</string>
    <string name="checkLoginRecordar">Recordarme</string>
    <string name="txtviewOlvidaPassword">¿Olvida su contraseña?</string>
    <string name="btnLoginEntrar">Entrar</string>
    <string name="btnLoginRegistrarse">Registrarse</string>
    <string name="login">¡INICIA SESIÓN!</string>
    <string name="registrarse">¡REGÍSTRATE!</string>

    <!--Jensy Login-->
    <string name="txtviewRegistrarNombres">Nombres</string>
    <string name="txtviewRegistrarApellidos">Apellidos</string>
    <string name="txtviewRegistrarCorreo">Correo Electrónico</string>
    <string name="txtviewRegistrarUsuario">Usuario</string>
    <string name="txtviewRegistrarPassword">Contraseña</string>
    <string name="txtviewRegistrarConfirmarPassword">Confirmar contraseña</string>

    <string name="txtviewRegistrarHuella">Establecer Huella</string>
    <string name="txtviewRegistrarFacial">Establecer Rec.Facial</string>
    <string name="btnRegistrarCrear">Crear cuenta</string>
    <string name="txtviewCuentaCreada">Ya tengo una cuenta</string>

    <!--Kency Angely -->
    <string name="TienesProblemasParaIniciarSesion">¿Tienes problemas para iniciar sesión?</string>
    <string name="ENVIARCODIGO">Enviar código</string>
    <string name="LabelTienesProblemasParaIniciarSesion">Para obtener un código de verificación, primero debes confirmar el correo electrónico que has añadido a tu cuenta</string>


    <string name="CrearCuenta">Crear cuenta</string>
    <string name="IngresarCodigo">Ingrese el código de verificacíon</string>
    <string name="LinkEnviarDeNuevo">Enviar de nuevo</string>
    <string name="Regístrate">Regístrate</string>

    <string name="RecuperarContra">Recuperar contraseña</string>
    <string name="RestaurarContra">Restaurar contraseña</string>

    <string name="LabelRecuperarContra">Hemos enviado un código de verificación a tu dirección de correo. Por favor, introduce esta secuencia de números en la siguiente casilla de verificación.</string>
    <string name="LinkEnviarDeNuevo2">Enviar de nuevo</string>
    <string name="VerificarCodigo">Verificar</string>

    <string name="ingresar">Ingresar</string>
    <string name="unirse">Unirse</string>
    <string name="No">Nada</string>
    <string name="Regístrarse">Regístrarse</string>
    <string name="Atras">Atras</string>

    <string name="ingreseNuevaContrasena">Ingrese una nueva contraseña</string>
    <string name="confirmaContrasena">Confirme su contraseña</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tituloConometro">Por favor, espera a que el tiempo finalice para poder solicitar un nuevo código.</string>
    <string name="habilitarHuella">Habilitar Huella Digital</string>


    <!--Gustavo Brocato -->
    <string name="appName">Music Store HN</string>
    <string name="resultBusqueda">Busqueda Grupo</string>
    <string name="NuevoGrupo">Nuevo Grupo</string>
    <string name="BuscarGrupo">Buscar Grupo</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombreGrupo">Nombre del Grupo</string>
    <string name="creador">Creado por</string>
    <string name="integrantes">Integrantes</string>
    <string name="grupos">Grupos</string>
    <string name="inicio">Inicio</string>
    <string name="usuarios">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="multimedia">Multimedia</string>
    <string name="ajustes">Ajustes</string>
    <string name="acercade">Acerca de</string>
    <string name="siguiente">Siguiente</string>
    <string name="agregar_integrantes">Agregar Integrantes</string>
    <string name="buscar_nombreUsuario">Buscar por nombre de usuario</string>
    <string name="nombreUsuario">Nombre del Usuario</string>
    <string name="crearGrupo">Crear Grupo</string>
    <string name="ingrese_nombreGrupo">Nombre del grupo</string>
    <string name="ingrese_descripcion">Descripción</string>
    <string name="integrante">Integrante</string>
    <string name="musica">Musica</string>
    <string name="video">Video</string>
    <string name="verTodo">Ver todo</string>
    <string name="grupoPrivado">Grupo Privado</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="tipoGrupo">Tipo de Grupo</string>
    <string name="guardarCambios">Guardar Cambios</string>
    <string name="notificacionesI">NOTIFICACIONES</string>
    <string name="elijaAudio">Elija la canción que desea subir</string>
    <string name="elijaVideo">Elija el video que desea subir</string>
    <string name="Usuario">Usuario</string>

    <!--Jonathan-->
    <string name="btnCrearPlayList">Crear PlayList</string>
    <string name="titulo">Music Store HN</string>

    <string name="nombresvideo">Nombre del video</string>
    <string name="title_activity_subir_archivo">SubirArchivo</string>
    <string name="nombresmusica">Nombre de la cancion</string>
    <string name="buttomsubir">Subir Archivo</string>
    <string name="buttombuscar">Buscar Archivo</string>
    <string name="buttommusica">Musica</string>
    <string name="buttomvideo">Video</string>
    <string name="nombreCancion">Nombre de la cancion</string>
    <string name="autor">Compuesta por</string>
    <string name="nombreVideos">Nombre del video</string>
    <string name="editado">Compuesta por</string>
    <string name="buscarMusica">Buscar Musica</string>
    <string name="buscarVideo">Buscar Video</string>
    <string name="resultBusquedaMusica">Busqueda Musica</string>
    <string name="resultBusquedaVideo">Busqueda Video</string>
    <string name="verPlayList">PlayList</string>
    <string name="cancionesFavoritas">Canciones Favoritas</string>
    <string name="nombreplaylist">Nombre PlayList</string>
    <string name="siguientePantalla">Siguiente</string>


</resources>