<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black90">


    <!-- Menu Items -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="73dp"
            android:contentDescription="App Logo"
            android:src="@drawable/logopantallaprincipal" />

        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="auto"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botoniniciomenudespegable"
                    android:contentDescription="Menu Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inicio"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botongruposmenudespegable"
                    android:contentDescription="Grupos Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grupos"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botonusuariosmenudespegable"
                    android:contentDescription="Usuarios Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuarios"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botonbuscarmenudespegable"
                    android:contentDescription="Buscar Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buscar"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botonmultimediamenudespegable"
                    android:contentDescription="Multimedia Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multimedia"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botonajustesmenudespegable"
                    android:contentDescription="Ajustes Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ajustes"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMenuItemClick">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/botonacercademenudespegable"
                    android:contentDescription="Acerca de Icon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acercade"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>






