<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmaCambioContrasena"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/btnAtras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/iconoatras"
                    android:importantForAccessibility="no"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atras"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/btnMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/menudespegable"
                    android:importantForAccessibility="no"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cambiarContrasena"
                    android:textColor="#D3D3D3"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="40dp">

                    <TextView
                        android:id="@+id/txtcodeVerificacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingreseCodigoVerificacion"
                        android:textColor="#D3D3D3"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/inputcodeVerificacion"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edittext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:labelFor="@+id/txtcodeVerificacion"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/enviarCodigo"
                        android:textColor="@color/lightGray90"
                        tools:ignore="RtlHardcoded" />
                    
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="150dp"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/button"
                        android:text="@string/verificar"
                        android:textColor="@color/white"
                        tools:ignore="TextContrastCheck,VisualLintButtonSize" />



                </LinearLayout>



                </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>