<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_PerfilPersonal"
    android:background="@drawable/background"
    android:paddingTop="15dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent"
                android:id="@+id/btn_CambiarContrasenaAtras">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/iconoatras"
                    android:importantForAccessibility="no"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atras"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/btnMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/menudespegable"
                    android:importantForAccessibility="no"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cambiarContrasena"
                    android:textColor="#D3D3D3"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/iconorecuperarcontrasena" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="40dp">

                <TextView
                    android:id="@+id/txtContrasenaActual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingreseContrasenaActual"
                    android:textColor="#D3D3D3"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/inputContrasenaActual"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:labelFor="@+id/txtContrasenaActual"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtNuevaContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingreseNuevaContrasena"
                    android:textColor="#D3D3D3"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/inputNuevaContasena"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:labelFor="@id/txtNuevaContrasena"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtConfirmaContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmaContrasena"
                    android:textColor="#D3D3D3"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/inputConfirmaContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:labelFor="@id/txtConfirmaContrasena"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/button"
                    android:text="@string/enviarCodigo"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</ScrollView>